Fix word wrap on people inputs with very long names

--- a/src/main/resources/static/shiba.css
+++ b/src/main/resources/static/shiba.css
@@ -568,7 +568,7 @@ input[id='sad']:checked + .feedback-buttons {
 }
 
 .word-wrap-break-word {
-  word-wrap: break-word;
+  word-break: break-word;
 }
 
 .spacing-above-45 {
